--- a/package.json
+++ b/package.json
@@ -22,5 +22,12 @@
     "eslint": "^8.24.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0"
+  },
+  "dependencies": {
+    "base64url": "^3.0.1",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.2",
+    "mongodb": "^4.10.0",
+    "nodemailer": "^6.8.0"
   }
 }
